# jarvis_cli

./: .env.example  .gitignore  AGENTS.md  BUILD.bazel  COMANDOS_CORRETOS.md  DATABRICKS_CHAT_API_ADAPTER.md  DATABRICKS_URL_FIX_FINAL.md  EXECUTAR_NA_VPS.md  MODELOS_DESENVOLVIMENTO.md  MODULE.bazel  OLLAMA-INTEGRATION-PLAN.md  OLLAMA-VPS-INTEGRATION.md  OLLAMA_VPS_SETUP.md  RAG-IMPLEMENTATION-SUMMARY.md  README_CONFIGURACAO.md  README_CREDENTIALS.md  README_VPS_INSTALL.md  SETUP_VPS_SERVICES.md  WORKAROUND_SEM_RAG.md  appsettings.Example.json  bashrc-snippet.sh  build-jarvis.bat  check-build-status.sh  cleanup-git.sh  config.toml.example  config.toml.vps  defs.bzl  deploy-jarvis-services-vps.sh  deploy-ollama-vps.sh  docker-compose.daemon.yml  docker-compose.homeserver.yml  docker-compose.vps.yml  docker-compose.web-api.yml  flake.nix  index-project.sh  install-vps.sh  justfile  pnpm-workspace.yaml  prompt-analise-projeto.txt  run-jarvis.sh  (+6 more)
jarvis-ext/: Cargo.toml
jarvis-ext/daemon/: Cargo.toml  Dockerfile
jarvis-ext/daemon-common/: Cargo.toml
jarvis-ext/daemon-common/src/: lib.rs  schedule.rs
jarvis-ext/daemon/src/: executor.rs  lib.rs  pipeline.rs  scheduler.rs
jarvis-ext/daemon/tests/: seo_blog_e2e.rs
jarvis-ext/github/src/: client.rs  issues.rs  models.rs  pull_requests.rs  repositories.rs
jarvis-ext/github/tests/: integration_test.rs
jarvis-ext/jarvis-api/: Cargo.toml
jarvis-ext/jarvis-api/src/: auth.rs  telemetry.rs
jarvis-ext/jarvis-client/: Cargo.toml
jarvis-ext/jarvis-client/src/: default_client.rs  error.rs  request.rs  retry.rs
jarvis-ext/jarvis-protocol/: Cargo.toml
jarvis-ext/jarvis-protocol/src/: account.rs  config_types.rs  lib.rs  models.rs  openai_models.rs  protocol.rs  thread_id.rs
jarvis-ext/messaging/: Cargo.toml
jarvis-ext/messaging/src/: conversation.rs  handler.rs  security.rs
jarvis-ext/telegram/: Cargo.toml
jarvis-ext/telegram/src/: config.rs  webhook.rs
jarvis-ext/whatsapp/: Cargo.toml
jarvis-ext/whatsapp/src/: lib.rs  platform.rs
jarvis-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
jarvis-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
jarvis-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs  schema_fixtures.rs
jarvis-rs/app-server-protocol/tests/: schema_fixtures.rs
jarvis-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
jarvis-rs/app-server-test-client/src/: lib.rs  main.rs
jarvis-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  dynamic_tools.rs  error_code.rs  filters.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
jarvis-rs/arg0/: BUILD.bazel  Cargo.toml
jarvis-rs/arg0/src/: lib.rs
jarvis-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.md
jarvis-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs  get_task.rs  lib.rs
jarvis-rs/cli/: BUILD.bazel  Cargo.toml
jarvis-rs/cli/src/: agent_cmd.rs  analytics_cmd.rs  app_cmd.rs  autonomous_cmd.rs  context_cmd.rs  daemon_cmd.rs  debug_sandbox.rs  exit_status.rs  intent_cmd.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  safety_cmd.rs  skills_cmd.rs  teams_cmd.rs  wsl_paths.rs
jarvis-rs/cli/tests/: agent.rs  autonomous.rs  context.rs  execpolicy.rs  features.rs  intent.rs  mcp_add_remove.rs  mcp_list.rs  mod.rs  safety.rs  skills.rs
jarvis-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
jarvis-rs/cloud-tasks-client/src/: api.rs  http.rs  lib.rs  mock.rs
jarvis-rs/daemon/: Cargo.toml  Dockerfile  env.example
jarvis-rs/daemon-common/: Cargo.toml
jarvis-rs/daemon-common/src/: db.rs  models.rs  schedule.rs
jarvis-rs/daemon/examples/: pipeline-google-free-tier.json  pipeline-google-gemini.json
jarvis-rs/daemon/src/: decision_engine.rs  executor.rs  main.rs  notifications.rs  pipeline.rs  runner.rs  scheduler.rs
jarvis-rs/daemon/tests/: integration_google.rs  proposal_executor_e2e.rs
jarvis-rs/debug-client/: Cargo.toml  README.md
jarvis-rs/debug-client/src/: client.rs  commands.rs  main.rs  output.rs  reader.rs  state.rs
jarvis-rs/exec/: BUILD.bazel  Cargo.toml
jarvis-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
jarvis-rs/exec-server/src/: lib.rs  posix.rs
jarvis-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
jarvis-rs/exec/tests/: all.rs  event_processor_with_json_output.rs
jarvis-rs/github/: Cargo.toml
jarvis-rs/github/src/: client.rs  errors.rs  git.rs  issues.rs  lib.rs  models.rs  pull_requests.rs
jarvis-rs/github/tests/: integration_test.rs
jarvis-rs/linux-sandbox/: BUILD.bazel  Cargo.toml  README.md  build.rs
jarvis-rs/linux-sandbox/src/: bwrap.rs  landlock.rs  lib.rs  linux_run_main.rs  main.rs  mounts.rs  vendored_bwrap.rs
jarvis-rs/messaging/: Cargo.toml
jarvis-rs/messaging/src/: conversation.rs  lib.rs  message.rs  platform.rs  rate_limit.rs  security.rs
jarvis-rs/process-hardening/: BUILD.bazel  Cargo.toml  README.md
jarvis-rs/process-hardening/src/: lib.rs
jarvis-rs/telegram/: Cargo.toml
jarvis-rs/telegram/src/: client.rs  config.rs  lib.rs  message.rs  platform.rs  webhook.rs
jarvis-rs/tui/: BUILD.bazel  Cargo.toml  prompt_for_init_command.md  styles.md
jarvis-rs/tui/src/: additional_dirs.rs  app.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  ascii_animation.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  collab.rs  collaboration_modes.rs  color.rs  custom_terminal.rs  cwd_prompt.rs  diff_render.rs  exec_command.rs  external_editor.rs  file_search.rs  frames.rs  get_git_diff.rs  history_cell.rs  insert_history.rs  key_hint.rs  lib.rs  (+28 more)
jarvis-rs/web-api/: .dockerignore  .railwayignore  ARQUITETURA_SERVIDOR.md  Cargo.toml  DEPLOY.md  DEPLOY_RAILWAY.md  DEPLOY_VPS.md  DOCKER_COMPOSE.md  Dockerfile  INTEGRACAO_BANCO.md  PROXIMAS_ETAPAS.md  README.md  README_RAILWAY.md  TESTE_LOCAL.md  TESTE_LOCAL_SEM_DOCKER.md  TESTS.md  deploy-vps.ps1  deploy-vps.sh  fly.toml  railway.json  render.yaml  test-local.ps1
(+1210 files in other folders)
