[package]
name = "jarvis-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon for autonomous content generation and publishing"

[lib]
name = "jarvis_daemon"
path = "src/lib.rs"

[[bin]]
name = "jarvis-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
jarvis-daemon-common = { workspace = true }
jarvis-telegram = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
jarvis-daemon-common = { workspace = true, features = ["test-support"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
