[package]
name = "jarvis-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Jarvis messaging system for Telegram and WhatsApp"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
hmac = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4"
