[package]
name = "jarvis-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Jarvis Telegram bot integration"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["json", "multipart", "tokio", "http1"] }
tokio-stream = { workspace = true }
chrono = { workspace = true }
jarvis-messaging = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
