[package]
name = "jarvis-cloud-tasks-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "jarvis_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["online"]
online = ["dep:jarvis-backend-client"]
mock = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
diffy = "0.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
jarvis-backend-client = { path = "../backend-client", optional = true }
jarvis-git = { workspace = true }
