[package]
name = "jarvis-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon for autonomous content generation and publishing"

[[bin]]
name = "jarvis-daemon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
jarvis-daemon-common = { path = "../daemon-common" }
jarvis-telegram = { path = "../telegram" }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = "0.9.5"
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
jarvis-daemon-common = { path = "../daemon-common", features = ["test-support"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
