load("//:defs.bzl", "jarvis_rust_crate")

jarvis_rust_crate(
    name = "exec-server",
    crate_name = "codex_exec_server",
    integration_deps_extra = ["//jarvis-rs/exec-server/tests/common:common"],
    test_tags = ["no-sandbox"],
    extra_binaries = [
        "//jarvis-rs/cli:jarvis",
    ],
)
