[package]
name = "jarvis-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jarvis-exec"
path = "src/main.rs"

[lib]
name = "jarvis_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
jarvis-arg0 = { workspace = true }
jarvis-cloud-requirements = { workspace = true }
jarvis-common = { workspace = true, features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
jarvis-core = { workspace = true }
jarvis-protocol = { workspace = true }
jarvis-utils-absolute-path = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
supports-color = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
jarvis-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
