[package]
name = "jarvis-linux-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jarvis-linux-sandbox"
path = "src/main.rs"

[lib]
name = "jarvis_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
jarvis-core = { workspace = true }
jarvis-utils-absolute-path = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }
serde_json = { workspace = true }
which = "8.0.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }

[build-dependencies]
cc = "1"
pkg-config = "0.3"
