[package]
name = "jarvis-web-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP REST API server for Jarvis"

[[bin]]
name = "jarvis-web-api"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart", "tower-log"] }
clap = { workspace = true, features = ["derive"] }
jarvis-core = { workspace = true }
jarvis-common = { workspace = true, features = ["cli"] }
jarvis-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = [
    "cors",
    "fs",
    "trace",
] }
serde_urlencoded = "0.7"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
http = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
axum-test = "9.0"
tower = { version = "0.5", features = ["util", "timeout"] }
tokio-test = "0.4"